[tool.poetry]
name = "imgurparser"
version = "0.1.0"
description = ""
authors = ["ballkicker <ballkicker@horsefucker.org>"]
readme = "README.md"

[tool.poetry.scripts]
main = "imgurparser.main:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
